<resources>
    <string name="app_name">ACME Explorer</string>
    <string name="Image_splash">Maleta splash</string>
    <string name="ButtonBuyTrip">Seleccionar</string>
    <string name="precio">Precio</string>
    <string name="FechaSalida">Fecha salida</string>
    <string name="FechaLlegada">Fecha llegada</string>
    <string name="LugarSalida">Lugar de salida</string>
    <string name="Filter">Filtrar</string>
    <string name="PrecioMinimo">Precio mínimo (euros)</string>
    <string name="PrecioMaximo">Precio máximo (euros)</string>
    <string name="Aplicar">Aplicar</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_password_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_google_text">Acceso con google</string>
    <string name="login_button_register_text">Registrarse</string>
    <string name="login_mail_error_1">El correo electrónico no puede estar vacío</string>
    <string name="login_mail_error_2">La contraseña no puede estar vacía</string>
    <string name="login_mail_access_error">Error al acceder a la aplicación</string>
    <string name="login_verified_mail_error">Aún no has activado tu cuenta, ¿ Quieres que te enviemos un correo de verificación ?</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_verified_mail_error_sent">Hemos enviado un correo de verificación a tu dirección</string>
    <string name="login_verified_mail_error_no_sent">No se ha podido enviar un correo de verificación à tu cuenta</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debes actualizar Google Play Services antes de continuar</string>
    <string name="login_download_google_play_services">Actualizar</string>
    <string name="google_play_services_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">1079038391916-bhaeapam1jtr7equrll0v5o2lqqgfr0g.apps.googleusercontent.com</string>
    <string name="login_completed">El usario se ha accedido correctamente</string>
    <string name="login_password_confirm_et_hint">Confirmar contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="register_error_user">La direcciónn de correo no es válida</string>
    <string name="register_error_password">La contraseña no es válida</string>
    <string name="register_error_password_not_match">Las contraseñas no coinciden</string>
    <string name="register_ok">El usario se ha registrado correctamente</string>
    <string name="register_error">Se ha producido un error al registrar al usario</string>
    <string name="take_picture">Obtener imagen</string>
    <string name="take_picture_camera_rationale">Necesitamos acceder a tu cámara</string>
    <string name="take_picture_camera_rationale_ok">Permitir</string>
    <string name="camera_not_granted">No es posible usar esta función sin la cámara</string>
    <string name="storage_not_granted">No se puede almacenar la foto</string>
    <string name="location_rationale">Se necesita la localización para esta funcionalidad</string>
    <string name="location_rationale_ok">Permitir localización</string>
    <string name="location_cancel">Este funcion es importante para la aplicación</string>
    <string name="ButtonShowOnMap">Mostrar el lugar de salida en el mapa</string>
    <string name="ButtonShowWeather">Mostrar el tiempo actual en esta ciudad</string>
    <string name="Temperatura">Temperatura actual</string>
    <string name="WeatherDescription">Tiempo actual</string>
    <string name="open_weather_map_api_key">bf6bfb989f475209f4f8c8cb1af82a5d</string>
</resources>